all pages working

--- a/views/currentsession.handlebars
+++ b/views/currentsession.handlebars
@@ -1,12 +1,12 @@
 
+<html>
 <head>
-  <link rel="stylesheet" href="/css/website.css">
-  <title>Home</title>
+	<link rel="stylesheet" href="/css/website.css">
+	<title>Home</title>
 </head>
-
 <body>
     <div class="header">
-        <a href="index"><h4>Back<h4></a>
+        <a href="homepage"><h4>Back<h4></a>
         <h1>Current Session</h1>
     </div>
     <div class="sesh_type">
@@ -20,8 +20,9 @@
         </div>
 
         <div class="buttons">
-            <button id="pause">Pause</button> <button id="end">End</button>
+            <button id="pause">Pause</button><button id="end"><a href="reflections">End</a></button>
         </div>
 
     </div>
 </body>
+</html>
