--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,29 +1,32 @@
 
+<html>
 <head>
-  <link rel="stylesheet" href="/css/website.css">
-  <title>Home</title>
-</head>
+	<link rel="stylesheet" href="/css/login.css"> 
 
+	<title>Home</title>
+</head>
 <body>
     <div>
-        <div class="header">
-            <h1> Home</h1>
-            <h3> Hi Karen! </h3>
-            <h4> Today is Tuesday, February 15, 2021</h4>
+         <div class="circle"></div>
+         <div class="logo">
+            <h1> Logo</h1>
         </div>
-        <div class="big-button">
-            <button type="button" class="start"><a href="currentsession">Start Session</a></button>
-        </div>
-        <div class="graph">
-            <h2>Weekly Summary</h2>
-            <div class="img">
-                <img class="graph2" src="/images/graph.png" alt="graph">
-            </div>
-        </div>
-        <div class="socials">
-            <h2>Most Used Apps</h2>
-            <img class="graph2" src="/images/socials.png" alt="socials">
-        </div>
-    </div>
 
+        <div class="username">
+            <h5>Username
+            	******** </h5> 
+            <div class="line"></div> 
+         </div>
+         	
+          <div class="password">
+         	<h6>Password
+         		******** </h6>
+         	<div class="line2"></div>
+         	</div>
+         <div class="su-button">
+            <button type="button" class="start"><a href="homepage">Sign Up</a></button>
+        </div>
+
+    </div>
 </body>
+</html>
