--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 <head>
   <base href="/" /> <!-- for local host -->
   <link rel="stylesheet" href="/css/website.css">
+  <link rel="stylesheet" href="/css/login.css"> 
   <title>Home</title>
 </head>
 
