added procfile and attempted {{each}}

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,8 @@
   <div>
     {{{ body }}}
   </div>
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="/js/seemore.js"></script>
 </body>
 
 </html>
