--- a/views/sessionsummary.handlebars
+++ b/views/sessionsummary.handlebars
@@ -20,21 +20,37 @@
                 <a href="insights"><h4>See More</h4></a>
             </div>
         </div>
-        <div>
-             <h3>Most Used Apps</h3> 
-        </div>
-        {{#each socials}}
         <div class="socials">
-            <p>{{app_name}}</p>
-            <p>{{minutes}}</p>
-        {{/each}}
+            <h3>Most Used Apps</h3>
+            <div class="img">
+                <img class="social-icon" src="/images/graphics/iMessage App.png" alt="iMessage">
+            </div>
+            <div class="socials-time">
+                <h4> 24 minutes</h4>
+            </div>
+            <div class="img">
+                <img class="social-icon" src="/images/graphics/Instagram App.png" alt="Instagram">
+            </div>
+            <div class="socials-time">
+                <h4> 19 minutes</h4>
+            </div>
         </div>
 
         <div class="big-button">
             <button type="button" class="submit"><a href="homepage">Exit Session</a></button>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery.js"></script>
-	<script src="/js/seemore.js"></script>
 </body>
 </html>
+
+
+
+{{!-- 
+<div>
+    <h3>Most Used Apps</h3>
+</div>
+<div class="socials">
+    <p>{{app_name}}</p>
+    <p>{{minutes}}</p>
+</div> 
+--}}
