added mid-fidelity styling, edited headers, and linked Google Fonts :D

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,13 @@
 
 <head>
-  <link rel="stylesheet" href="/css/website.css">
-  <title>Home</title>
+    <link rel="stylesheet" href="/css/website.css" >
+    <link rel ="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+    <style>
+        body{
+            font-family: "Inter", sans-serif;
+        }
+    </style>
+    <title>Home</title>
 </head>
 
 <body>
@@ -11,17 +17,19 @@
         </div>
         <div class="header">
             <h1> Home</h1>
-            <h3> Hi Karen! </h3>
-            <h4> Today is Tuesday, February 15, 2021</h4>
+            <h2> Hi Karen! </h2>
+            <h4> Today is Monday, February 15, 2021 </h4>
         </div>
-        <div class="big-button">
-            <button type="button" class="start"><a href="currentsession">Start Session</a></button>
+        <div class="small-button">
+            <a href="currentsession"><p>Start Session</p></a></button>
         </div>
         <div class="graph">
-            <h2>Weekly Summary</h2>
-             <a href="pastsession_selector"><p> See Past Sessions</p></a>
+            <h2>This Week's Summary</h2>
             <div class="img">
                 <img class="graph2" src="/images/graph.png" alt="graph">
+            </div>
+            <div class="small-button">
+                <a href="pastsession_selector"><p> See Past Sessions</p></a>
             </div>
         </div>
         <div class="socials">
