--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,30 +1,32 @@
 
 <html>
 <head>
-	<link rel="stylesheet" href="/css/login.css"> 
+	<link rel="stylesheet" href="/css/website.css" >
+    <link rel ="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+    <style>
+        body{
+            font-family: "Inter", sans-serif;
+        }
+    </style>
 
 	<title>Home</title>
 </head>
 <body>
     <div>
-         <div class="circle"></div>
-         <div class="logo">
-            <h1> Logo</h1>
+        <div class="question_form">
+            <h4> Username </h4>
+            <textarea name="textbox" rows="1" cols="100">
+            </textarea>
+        </div>
+         	
+        <div class="question_form">
+            <h4> Password </h4>
+            <textarea name="textbox" rows="1" cols="100">
+            </textarea>
         </div>
 
-        <div class="username">
-            <h5>Username
-            	******** </h5> 
-            <div class="line"></div> 
-         </div>
-         	
-          <div class="password">
-         	<h6>Password
-         		******** </h6>
-         	<div class="line2"></div>
-         	</div>
-         <div class="su-button">
-            <button type="button" class="start"><a href="homepage">Sign Up</a></button>
+         <div class="big-button">
+            <button type="button" class="submit"><a href="homepage"><h4>Sign up</h4></a></button>
         </div>
 
     </div>
