--- a/views/insights.handlebars
+++ b/views/insights.handlebars
@@ -1,8 +1,12 @@
 <html>
 <head>
-
-	<link rel="stylesheet" href="/css/login.css"> 
-
+    <link rel="stylesheet" href="/css/website.css" >
+    <link rel ="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+    <style>
+        body{
+            font-family: "Inter", sans-serif;
+        }
+    </style>
 	<title>Home</title>
 </head>
 <body>
@@ -30,8 +34,8 @@
              </h4>
             
         </div>
-        <div class="home-button">
-            <button type="button" class="start"><a href="currentsession">Return Home</a></button>
+        <div class="small-button">
+            <a href="currentsession"><p>Return Home</p></a></button>
         </div>
     </div>
 </body>
