--- a/views/pastsession_details.handlebars
+++ b/views/pastsession_details.handlebars
@@ -2,8 +2,13 @@
 <head>
     <!---<link href = "./public/css/website_design.css" rel="stylesheet"> --->
     
-	<link rel="stylesheet" href="/css/website.css"> 
-
+    <link rel="stylesheet" href="/css/website.css" >
+    <link rel ="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+    <style>
+        body{
+            font-family: "Inter", sans-serif;
+        }
+    </style>
 	<title>Session 1 Details</title>
 </head>
 <body>
@@ -13,7 +18,7 @@
             <h1> Session 1</h1>
         </div>
         <div class="img">
-            <img class="graph2" src="/images/session_summary_graph.png" alt="bar chart">
+            <img class="graph2" src="images/graph.png" alt="bar chart">
         </div>
         <div class = "timeline">
             <h2>Timeline</h2>
