--- a/views/pastsession_overview.handlebars
+++ b/views/pastsession_overview.handlebars
@@ -1,29 +1,34 @@
 <html>
 <head>
     
-	<link rel="stylesheet" href="/css/website.css"> 
-
+    <link rel="stylesheet" href="/css/website.css" >
+    <link rel ="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+    <style>
+        body{
+            font-family: "Inter", sans-serif;
+        }
+    </style>
 	<title>Past Session Overview</title>
 </head>
 <body>
     <div>
         <div class="header">
             <a href="pastsession_selector"><h4>Back</h4></a>
-            <h1> 02/02/2021</h1>
+            <h1> February 2, 2021</h1>
         </div>
         <div class="img">
-            <img class="graph2" src="/images/pie_chart.png" alt="pie chart">
+            <img class="graph2" src="images/piechart.png" alt="pie chart">
         </div>
         <div class = "sessions">
             <h2>Sessions</h2>
             <div class="session-buttons">
-                <a href="pastsession_details">Session 1</a>
+                <a href="pastsession_details"><h4>Session 1</h4></a>
             </div>
             <div class="session-buttons">
-                <a href="pastsession_details">Session 2</a>
+                <a href="pastsession_details"><h4>Session 2</h4></a>
             </div>
             <div class="session-buttons">
-                <a href="pastsession_details">Session 3</a>
+                <a href="pastsession_details"><h4>Session 3</h4></a>
             </div>
         </div>
     </div>
