--- a/views/reflections.handlebars
+++ b/views/reflections.handlebars
@@ -1,7 +1,12 @@
 <html>
 <head>
-	<link rel="stylesheet" href="/css/website.css"> 
-
+    <link rel="stylesheet" href="/css/website.css" >
+    <link rel ="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+    <style>
+        body{
+            font-family: "Inter", sans-serif;
+        }
+    </style>
 	<title>Reflection</title>
 </head>
 <body>
@@ -25,8 +30,8 @@
             <input type="range" min="0" max="5" value="1">
         </div>
 
-        <div class="big-button">
-            <button type="button" class="submit"><a href="sessionsummary">Next</a></button>
+        <div class="small-button">
+            <a href="sessionsummary"><p>Next</p></a></button>
         </div>
     </div>
 </body>
