--- a/public/css/website.css
+++ b/public/css/website.css
@@ -1,6 +1,6 @@
 /* TYPE */
 h1{
-	font-family: Inter;
+	font-family: "Inter", sans-serif;
 	font-weight: bold;
 	font-size: 72px;
 	line-height: 96px;
@@ -8,7 +8,7 @@ h1{
 	}
 
 h2{
-	font-family: Inter;
+	font-family: "Inter", sans-serif;
 	font-weight: bold;
 	font-size: 56px;
 	line-height: 72px;
@@ -16,7 +16,7 @@ h2{
 	}
 
 h3{
-	font-family: Inter;
+	font-family: "Inter", sans-serif;
 	font-weight: medium;
 	font-size: 48px;
 	line-height: 56px;
@@ -24,19 +24,28 @@ h3{
 }
 
 h4{
-	font-family: Inter;
+	font-family: "Inter", sans-serif;
 	font-weight: normal;
 	font-size: 36px;
+	line-height: 48px;
+	text-align: left;
+}
+
+h5{
+	font-family: "Inter", sans-serif;
+	font-weight: normal;
+	font-size: 24px;
 	line-height: 54px;
 	text-align: left;
 }
 
 p{
-	font-family: Inter;
+	font-family: "Inter", sans-serif;
 	font-weight: normal;
 	font-size: 24px;
 	line-height: 54px;
-	text-align: left;
+	text-align: center;
+	color: white;
 }
 
 .container{
@@ -109,6 +118,7 @@ p{
 .buttons{
 	margin-top: 200px;
 	text-align: center;
+	color: #096171;
 }
 
 .sesh_type{
@@ -169,6 +179,24 @@ body{
 	height: auto;
 	
 }
+
+/* BUTTONS */
+.small-button{
+	border: 1px solid;
+	border-radius: 8px;
+	background-color: #096171;
+	margin: 64px 16px;
+	padding: 8px 16px;
+	text-align: center;
+	text-decoration: none;
+	clear: both;
+}
+
+.a:active, a:link, a:visited{
+	text-decoration:none;
+	color: black;
+}
+
 
 .session-buttons{
 	border: 1px solid;
