--- a/views/currentsession.handlebars
+++ b/views/currentsession.handlebars
@@ -1,7 +1,13 @@
 
 <html>
 <head>
-	<link rel="stylesheet" href="/css/website.css">
+	<link rel="stylesheet" href="/css/website.css" >
+    <link rel ="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+    <style>
+        body{
+            font-family: "Inter", sans-serif;
+        }
+    </style>
 	<title>Home</title>
 </head>
 <body>
