--- a/views/pastsession_selector.handlebars
+++ b/views/pastsession_selector.handlebars
@@ -2,8 +2,13 @@
 <head>
     <!---<link href = "./public/css/website_design.css" rel="stylesheet"> --->
     
-	<link rel="stylesheet" href="/css/website.css"> 
-
+    <link rel="stylesheet" href="/css/website.css" >
+    <link rel ="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+    <style>
+        body{
+            font-family: "Inter", sans-serif;
+        }
+    </style>
 	<title>Past Session Selection</title>
 </head>
 <body>
@@ -13,15 +18,14 @@
             <h1> Past Sessions</h1>
         </div>
         <div class = "sessions">
-            <h2>Sessions</h2>
             <div class="session-buttons">
-                <a href="pastsession_overview">02/02/2021</a>
+                <a href="pastsession_overview"><h4>02/02/2021</h4></a>
             </div>
             <div class="session-buttons">
-                <a href="pastsession_overview">02/01/2021</a>
+                <a href="pastsession_overview"><h4>02/01/2021</h4></a>
             </div>
             <div class="session-buttons">
-                <a href="pastsession_overview">02/02/2021</a>
+                <a href="pastsession_overview"><h4>01/31/2021</h4></a>
             </div>
         </div>
     </div>
