--- a/views/sessionsummary.handlebars
+++ b/views/sessionsummary.handlebars
@@ -1,17 +1,22 @@
 <html>
 <head>    
-	<link rel="stylesheet" href="/css/website.css"> 
-
+    <link rel="stylesheet" href="/css/website.css" >
+    <link rel ="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+    <style>
+        body{
+            font-family: "Inter", sans-serif;
+        }
+    </style>
 	<title>Session Summary</title>
 </head>
 <body>
     <div>
         <div class="header">
             <a href="reflections"><h4>Back</h4></a>
-            <h2>Weekly Summary</h2>
+            <h2>Session Summary</h2>
         </div>
         <div class="img">
-            <img class="graph2" src= "/images/session_summary_graph.png" alt = "summary_graph">
+            <img class="graph2" src= "/images/graph.png" alt = "summary_graph">
         </div>
         <div class="insights">
             <h3>Insights</h3>
@@ -23,21 +28,21 @@
         <div class="socials">
             <h3>Most Used Apps</h3>
             <div class="img">
-                <img class="social-icon" src="/images/graphics/iMessage App.png" alt="iMessage">
+                <img class="social-icon" src="/images/instagram logo.png" alt="Instagram">
             </div>
             <div class="socials-time">
                 <h4> 24 minutes</h4>
             </div>
             <div class="img">
-                <img class="social-icon" src="/images/graphics/Instagram App.png" alt="Instagram">
+                <img class="social-icon" src="/images/facebook logo.png" alt="Facebook">
             </div>
             <div class="socials-time">
                 <h4> 19 minutes</h4>
             </div>
         </div>
 
-        <div class="big-button">
-            <button type="button" class="submit"><a href="homepage">Exit Session</a></button>
+        <div class="small-button">
+            <a href="homepage"><p>Exit Session</p></a></button>
         </div>
     </div>
 </body>
