stopwatch and time

--- a/views/currentsession.handlebars
+++ b/views/currentsession.handlebars
@@ -22,7 +22,9 @@
     <div class="container">
 
         <div class="display">
-            00:00:00
+             <div id="sw-time">00:00:00</div>
+            <input type="button" value="Reset" id="sw-rst" disabled />
+            <input type="button" value="Start" id="sw-go" disabled />
         </div>
 
         <div class="buttons">
@@ -32,3 +34,5 @@
     </div>
 </body>
 </html>
+
+
