--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="/css/website.css">
   <link rel="stylesheet" href="/css/login.css"> 
   <title>Home</title>
+  <script type="text/javascript" src="/js/currentsession.js"></script>
 </head>
 
 <body>
